Updated the Web files

--- a/webview/index.html
+++ b/webview/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./chatbot-ui.css">
-    <title>Admin Bot</title>
+    <title>GovQ&A</title>
 
     <style>
         body {
@@ -38,8 +38,8 @@
 <body>
 
     <section>
-        <h1>Admin Procedures Bot</h1>
-        <p>Click on the chat button to start chatting</p>
+        <h1>Welcome to the GovQ&A</h1>
+        <p>Your smart assistant is ready to help you</p>
     </section>
 
     <div id="chat-container"></div>
@@ -47,7 +47,7 @@
     <script>
         // http://localhost:5005/model/parse
         createChatBot(host = 'http://localhost:5005/webhooks/rest/webhook/', botLogo = "./imgs/bot-logo.png",
-            title = "Admin BOT", welcomeMessage = "Hello, How can I help you?", inactiveMsg = "Server is down, Please contact the developer to activate it", theme = "purple")
+            title = "GovQ&A", welcomeMessage = "Hi , I am the GovQ&A assistant , how can I help you ?", inactiveMsg = "Server is down, Please contact the developer to activate it", theme = "purple")
     </script>
 
 
