added Deployment.txt file
Deployment file to run RASA server on localhost to chat on web

--- a/webview/index.html
+++ b/webview/index.html
@@ -38,8 +38,8 @@
 <body>
 
     <section>
-        <h1>Welcome to the GovQ&A</h1>
-        <p>Your smart assistant is ready to help you</p>
+        <h1>Bienvenue au service GovQ&A</h1>
+        <p>votre assistant est prêt à répondre à vos questions</p>
     </section>
 
     <div id="chat-container"></div>
@@ -47,7 +47,7 @@
     <script>
         // http://localhost:5005/model/parse
         createChatBot(host = 'http://localhost:5005/webhooks/rest/webhook/', botLogo = "./imgs/bot-logo.png",
-            title = "GovQ&A", welcomeMessage = "Hi, I am the GovQ&A assistant, how can I help you?", inactiveMsg = "The Server does not respond...", theme = "purple")
+            title = "GovQ&A", welcomeMessage = "Bonjour,je suis votre assistant GovQ&A comment puis-je vous aider?", inactiveMsg = "Le Serveur ne repond pas...", theme = "purple")
     </script>
 
 
